@@ -586,10 +586,15 @@ autoscale()
 {
     double max_width = LONG_MIN, max_height = LONG_MIN;
     double x_scale, y_scale;
-    int i, first = 1;
+    int i;
     
     if (screen.drawing_area == NULL)
 	return;
+
+    screen.gerber_bbox.x1 = HUGE_VAL;
+    screen.gerber_bbox.y1 = HUGE_VAL;
+    screen.gerber_bbox.x2 = -HUGE_VAL;
+    screen.gerber_bbox.y2 = -HUGE_VAL;
 
     for(i = 0; i < MAX_FILES; i++) {
         if (screen.file[i]) {
@@ -597,24 +602,21 @@ autoscale()
             /* 
              * Find the biggest image and use as a size reference
              */
-	    if (first) {
-		screen.gerber_bbox.x1 = screen.file[i]->image->info->min_x;
-		screen.gerber_bbox.y1 = screen.file[i]->image->info->min_y;
-		screen.gerber_bbox.x2 = screen.file[i]->image->info->max_x;
-		screen.gerber_bbox.y2 = screen.file[i]->image->info->max_y;
-		first = 0;
-	    } else {
-		screen.gerber_bbox.x1 = MIN(screen.gerber_bbox.x1,
-					    screen.file[i]->image->info->min_x);
-		screen.gerber_bbox.y1 = MIN(screen.gerber_bbox.y1,
-					    screen.file[i]->image->info->min_y);
-		screen.gerber_bbox.x2 = MAX(screen.gerber_bbox.x2,
-					    screen.file[i]->image->info->max_x);
-		screen.gerber_bbox.y2 = MAX(screen.gerber_bbox.y2,
-					    screen.file[i]->image->info->max_y);
-	    }
+	    screen.gerber_bbox.x1 = MIN(screen.gerber_bbox.x1,
+					screen.file[i]->image->info->min_x+
+					screen.file[i]->image->info->offset_a);
+	    screen.gerber_bbox.y1 = MIN(screen.gerber_bbox.y1,
+					screen.file[i]->image->info->min_y+
+					screen.file[i]->image->info->offset_b);
+	    screen.gerber_bbox.x2 = MAX(screen.gerber_bbox.x2,
+					screen.file[i]->image->info->max_x+
+					screen.file[i]->image->info->offset_a);
+	    screen.gerber_bbox.y2 = MAX(screen.gerber_bbox.y2,
+					screen.file[i]->image->info->max_y+
+					screen.file[i]->image->info->offset_b);
         }
     }
+
 
     max_width = screen.gerber_bbox.x2 - screen.gerber_bbox.x1;
     max_height = screen.gerber_bbox.y2 - screen.gerber_bbox.y1;
@@ -1219,7 +1221,6 @@ motion_notify_event (GtkWidget *widget, GdkEventMotion *event)
     if (screen.pixmap != NULL) {
 	char str[60];
 	double X, Y;
-	int px, py;
 
 	if (screen.statusbar.absid)
 	    gtk_statusbar_pop((GtkStatusbar*)screen.statusbar.abs,
@@ -1228,8 +1229,7 @@ motion_notify_event (GtkWidget *widget, GdkEventMotion *event)
 	    gtk_statusbar_get_context_id((GtkStatusbar*)screen.statusbar.abs,
 					 "MotionNotify");
 	X = screen.gerber_bbox.x1 + (x+screen.trans_x)/(double)screen.scale;
-	gdk_window_get_size(screen.pixmap, &px, &py); /* Need pixmap size, not screen */
-	Y = screen.gerber_bbox.y1 + (py-y-screen.trans_y)/(double)screen.scale;
+	Y = (screen.gerber_bbox.y2 - (y+screen.trans_y)/(double)screen.scale);
 	sprintf(str,
 		"(X, Y) (%7.1f, %7.1f)mils (%7.2f, %7.2f)mm",
 		X*1000.0, Y*1000.0, X*25.4, Y*25.4);
